Minor fixes: login label specificity, footer privacy policy spacing

--- a/src/css/Registration/login.css
+++ b/src/css/Registration/login.css
@@ -2,7 +2,7 @@
   margin-top: 3rem;
 }
 
-.label--rememberme { font-weight: normal; }
+.form-group .label--rememberme { font-weight: normal; }
 .login-form a { display: block; font-size: 13px; }
 .login-form a:first-child { margin-top: 2.5rem; }
 .login-form a + a { margin-top: .5rem; }
